@@ -17,6 +17,7 @@ typedef enum
   GBLENDER_SOURCE_VRGB,
   GBLENDER_SOURCE_VBGR,
   GBLENDER_SOURCE_BGRA,
+  GBLENDER_SOURCE_MONO,
 
   GBLENDER_SOURCE_MAX
 
