@@ -1,3 +1,11 @@
+2021-01-25  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph] Handle mono bitmaps in the main blender.
+
+	* graph/gblany.h (_gblender_blit_mono_*): Implement it.
+	* graph/gblblit.c (gblender_blit_init): Recognize mono bitmaps.
+	* graph/gblblit.h (GBlenderSourceFormat): Add GBLENDER_SOURCE_MONO.
+
 2021-01-24  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* Makefile (FT_INCLUDES): Drop `$(TOP_DIR)/src/dlg`.
